@@ -22,6 +22,7 @@ import com.example.SBA_M.exception.AppException;
 import com.example.SBA_M.exception.ErrorCode;
 import com.example.SBA_M.mapper.UniversityMajorMapper;
 import com.example.SBA_M.repository.commands.*;
+import com.example.SBA_M.repository.elasticsearch.UniversityMajorSearchRepository;
 import com.example.SBA_M.repository.queries.UniversityMajorReadRepository;
 import com.example.SBA_M.service.UniversityMajorService;
 import com.example.SBA_M.service.messaging.producer.UniversityMajorProducer;
@@ -30,26 +31,24 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import co.elastic.clients.elasticsearch._types.query_dsl.*;
-import co.elastic.clients.elasticsearch.core.SearchRequest;
-import co.elastic.clients.elasticsearch.core.SearchResponse;
 
+
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 
+import javax.annotation.Nullable;
 import java.io.IOException;
+import java.time.Instant;
+import java.time.Year;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UniversityMajorServiceImpl implements UniversityMajorService {
-    private static final String INDEX_NAME = "university_major_search";
-    private static final String FIELD_SUBJECT_COMBINATION_ID = "subjectCombinationId";
-    private static final String FIELD_MAJOR_ID = "majorId";
-    private static final String FIELD_STATUS = "status";
-    private static final String FIELD_PROVINCE = "province";
-    private static final String STATUS_ACTIVE = "ACTIVE";
-    private static final int DEFAULT_MAX_RESULTS = 100;
+
 
     private final UniversityRepository universityRepository;
     private final MajorRepository majorRepository;
@@ -61,7 +60,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     private final UniversityMajorProducer universityMajorProducer;
     private final UniversityMajorReadRepository universityMajorReadRepository;
     private final SubjectCombinationRepository subjectCombinationService;
-    private final ElasticsearchClient elasticsearchClient;
+    private final UniversityMajorSearchRepository universityMajorSearchRepository;
+
 
     @Override
     public PageResponse<UniversityMajorResponse> getAllUniversityMajors(int page, int size) {
@@ -92,14 +92,12 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     @Override
     @Transactional
     public UniversityMajorResponse createUniversityMajor(UniversityMajorRequest request) {
+        String username = getCurrentUsername();
         University university = universityRepository.findByIdAndStatus(request.getUniversityId(), Status.ACTIVE)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_NOT_FOUND));
         Major major = majorRepository.findByIdAndStatus(request.getMajorId(), Status.ACTIVE)
                 .orElseThrow(() -> new AppException(ErrorCode.MAJOR_NOT_FOUND));
         List<SubjectCombination> subjectCombination = subjectCombinationService.findAllById(request.getSubjectCombinationIds());
-        if (subjectCombination.size() != request.getAdmissionMethodIds().size()) {
-            throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
-        }
         List<AdmissionMethod> methods = admissionMethodRepository.findAllById(request.getAdmissionMethodIds());
         if (methods.size() != request.getAdmissionMethodIds().size()) {
             throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
@@ -110,20 +108,27 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         entity.setMajor(major);
         entity.setAdmissionMethods(methods);
         entity.setSubjectCombinations(subjectCombination);
-        entity.setUniversityMajorName(request.getUniversityMajorName());
         entity.setScore(request.getScores());
+        entity.setYear(request.getYear());
+        entity.setUniversityMajorName(request.getUniversityMajorName());
         entity.setQuota(request.getQuota());
         entity.setNotes(request.getNotes());
+        entity.setStatus(Status.ACTIVE);
+        entity.setCreatedBy(username);
+        entity.setCreatedAt(Instant.now());
+        entity.setUpdatedBy(username);
+        entity.setUpdatedAt(Instant.now());
 
         UniversityMajor saved = universityMajorRepository.save(entity);
-       universityMajorProducer.sendCreateEvents(saved);
-        universityMajorProducer.sendSearchEvent(saved);
+         universityMajorProducer.sendCreateEvents(saved);
+        universityMajorProducer.sendSearchEvent(saved,entity.getYear());
         return universityMajorMapper.toResponse(saved);
     }
 
     @Override
     @Transactional
     public UniversityMajorResponse updateUniversityMajor(Integer id, UniversityMajorRequest request) {
+        String username = getCurrentUsername();
         UniversityMajor existing = universityMajorRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
 
@@ -145,13 +150,17 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         existing.setAdmissionMethods(methods);
         existing.setSubjectCombinations(subjectCombinations);
         existing.setScore(request.getScores());
+        existing.setYear(request.getYear());
         existing.setQuota(request.getQuota());
         existing.setNotes(request.getNotes());
         existing.setUniversityMajorName(request.getUniversityMajorName());
+        existing.setStatus(Status.ACTIVE);
+        existing.setUpdatedBy(username);
+        existing.setUpdatedAt(Instant.now());
 
         UniversityMajor saved = universityMajorRepository.save(existing);
         universityMajorProducer.sendCreateEvents(saved);
-        universityMajorProducer.sendSearchEvent(saved);
+        universityMajorProducer.sendSearchEvent(saved,request.getYear());
         return universityMajorMapper.toResponse(saved);
     }
 
@@ -162,7 +171,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
         um.setStatus(Status.DELETED);
         universityMajorRepository.save(um);
-        universityMajorProducer.sendSearchEvent(um);
+        universityMajorProducer.sendSearchEvent(um,um.getYear());
         universityMajorProducer.sendCreateEvents(um);
     }
 
@@ -214,7 +223,6 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                                             return new MajorEntry(
                                                     any.getMajorId().toString(),
                                                     any.getMajorName(),
-                                                    null, // Optional degree
                                                     scores,
                                                     any.getNote()
                                             );
@@ -249,59 +257,63 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                     String.valueOf(universityId),
                     null,
                     String.valueOf(majorId),
-                    null,
                     List.of()
             );
         }
 
-        // Extract static info from the first entry
+        // Extract base info
         String universityName = entries.getFirst().getUniversityName();
-        String majorName = entries.getFirst().getMajorName();
 
-        // Grouping: year -> methodId -> methodName -> subjectCombination -> score + note
-        Map<Integer, Map<Integer, Map<String, SubjectCombinationScore>>> grouped = new TreeMap<>(Collections.reverseOrder());
-
-        for (AdmissionEntriesDocument doc : entries) {
-            grouped
-                    .computeIfAbsent(doc.getYear(), y -> new HashMap<>())
-                    .computeIfAbsent(doc.getMethodId(), m -> new HashMap<>())
-                    .put(doc.getSubjectCombination(), new SubjectCombinationScore(
-                            doc.getSubjectCombination(),
-                            doc.getScore(),
-                            doc.getNote()
-                    ));
-        }
+        // Group by (year, methodName)
+        Map<String, List<AdmissionEntriesDocument>> grouped = entries.stream()
+                .collect(Collectors.groupingBy(doc -> doc.getYear() + "_" + doc.getMethodName()));
 
         List<MajorAdmissionYearGroup> yearGroups = grouped.entrySet().stream()
-                .map(yearEntry -> {
-                    Integer year = yearEntry.getKey();
-                    List<MajorMethodGroup> methods = yearEntry.getValue().entrySet().stream()
-                            .map(methodEntry -> {
-                                Integer methodId = methodEntry.getKey();
-                                String methodName = entries.stream()
-                                        .filter(e -> e.getMethodId().equals(methodId))
-                                        .map(AdmissionEntriesDocument::getMethodName)
-                                        .findFirst()
-                                        .orElse("Unknown");
+                .map(entry -> {
+                    String[] keyParts = entry.getKey().split("_", 2);
+                    Integer year = Integer.parseInt(keyParts[0]);
+                    String methodName = keyParts[1];
+                    List<AdmissionEntriesDocument> docs = entry.getValue();
 
-                                List<SubjectCombinationScore> subjectCombinations = methodEntry.getValue().values().stream().toList();
+                    // Group by universityMajorName (in case same year/method has multiple majors)
+                    Map<String, List<AdmissionEntriesDocument>> majorGroups = docs.stream()
+                            .collect(Collectors.groupingBy(AdmissionEntriesDocument::getMajorName));
+
+                    List<MajorMethodGroup> majorMethodGroups = majorGroups.entrySet().stream()
+                            .map(majorEntry -> {
+                                List<AdmissionEntriesDocument> majorDocs = majorEntry.getValue();
+                                AdmissionEntriesDocument firstDoc = majorDocs.getFirst();
+
+                                List<SubjectCombinationScore> subjectCombinations = majorDocs.stream()
+                                        .map(doc -> {
+                                            SubjectCombinationScore sc = new SubjectCombinationScore();
+                                            sc.setSubjectCombination(doc.getSubjectCombination());
+                                            return sc;
+                                        })
+                                        .toList();
+
                                 return new MajorMethodGroup(
-                                        String.valueOf(methodId),
-                                        methodName,
+                                        majorEntry.getKey(),  // universityMajorName
+                                        firstDoc.getScore(),
+                                        firstDoc.getNote(),
                                         subjectCombinations
                                 );
                             }).toList();
-                    return new MajorAdmissionYearGroup(year, methods);
-                }).toList();
+
+                    return new MajorAdmissionYearGroup(year, methodName, majorMethodGroups);
+                })
+                .sorted(Comparator.comparing(MajorAdmissionYearGroup::getYear).reversed())
+                .toList();
 
         return new MajorAdmissionResponse(
                 String.valueOf(universityId),
                 universityName,
                 String.valueOf(majorId),
-                majorName,
                 yearGroups
         );
     }
+
+
     @Override
     public SubjectCombinationResponse getSubjectCombinationAdmission(Integer universityId, Long subjectCombinationId) {
         List<AdmissionEntriesDocument> entries = universityMajorReadRepository
@@ -360,92 +372,94 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     }
     @Override
     public List<UniversitySubjectCombinationSearchResponse> searchBySubjectCombination(
-            Long subjectCombinationId, Long majorId, String province) throws IOException {
-        validateSubjectCombinationId(subjectCombinationId);
+            Long subjectCombinationId,
+            @Nullable String universityName) throws IOException {
 
-        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
-                .must(m -> m.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)))
-                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+        int currentYear = Year.now().getValue();
+        List<UniversityMajorSearch> results = new ArrayList<>();
 
-        if (majorId != null) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)));
+        // Try searching for current year first, then previous years
+        for (int year = currentYear; year >= currentYear - 5; year--) {
+            if (universityName != null && !universityName.trim().isEmpty()) {
+                results = universityMajorSearchRepository.findBySubjectCombinationIdAndUniversityNameContainingIgnoreCaseAndStatusAndYear(
+                        subjectCombinationId, universityName.trim(), Status.ACTIVE, year);
+            } else {
+                results = universityMajorSearchRepository.findBySubjectCombinationIdAndStatusAndYear(
+                        subjectCombinationId, Status.ACTIVE, year);
+            }
+
+            if (!results.isEmpty()) {
+                break; // Found results for this year, stop searching
+            }
         }
 
-        if (isValidString(province)) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
-        }
-
-        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
-        return response.hits().hits().stream()
-                .map(hit -> {
-                    UniversityMajorSearch doc = hit.source();
-                    if (doc == null) {
-                        return null;
-                    }
-                    return new UniversitySubjectCombinationSearchResponse(
-                            doc.getUniversityName(),
-                            doc.getUniversityMajorCountBySubjectCombination());
-                })
-                .filter(Objects::nonNull)
-                .toList();
+        return results.stream()
+                .map(this::mapToSubjectCombinationResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<UniversityMajorSearchResponse> searchByMajor(
-            Long majorId, String province, String method, Long subjectCombinationId) throws IOException {
-        validateMajorId(majorId);
+            Long majorId,
+            @Nullable String universityName) throws IOException {
 
-        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
-                .must(m -> m.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)))
-                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+        int currentYear = Year.now().getValue();
+        List<UniversityMajorSearch> results = new ArrayList<>();
 
-        if (isValidString(province)) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
+        // Try searching for current year first, then previous years
+        for (int year = currentYear; year >= currentYear - 5; year--) {
+            if (universityName != null && !universityName.trim().isEmpty()) {
+                results = universityMajorSearchRepository.findByMajorIdAndUniversityNameContainingIgnoreCaseAndStatusAndYear(
+                        majorId, universityName.trim(), Status.ACTIVE, year);
+            } else {
+                results = universityMajorSearchRepository.findByMajorIdAndStatusAndYear(
+                        majorId, Status.ACTIVE, year);
+            }
+
+            if (!results.isEmpty()) {
+                break; // Found results for this year, stop searching
+            }
         }
 
-        if (subjectCombinationId != null) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)));
-        }
+        // ✅ Group by universityId + majorId to remove duplicates
+        Map<String, UniversityMajorSearch> groupedResults = results.stream()
+                .collect(Collectors.toMap(
+                        // Key: universityId-majorId
+                        item -> item.getUniversityId() + "-" + item.getMajorId(),
+                        item -> item,
+                        (existing, replacement) -> existing // Keep the first occurrence
+                ));
 
-        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
-        return response.hits().hits().stream()
-                .map(hit -> {
-                    UniversityMajorSearch doc = hit.source();
-                    if (doc == null) {
-                        return null;
-                    }
-                    return new UniversityMajorSearchResponse(
-                            doc.getUniversityName(),
-                            doc.getUniversityMajorCountByMajor());
-                })
-                .filter(Objects::nonNull)
-                .toList();
+        return groupedResults.values().stream()
+                .map(this::mapToMajorResponse)
+                .collect(Collectors.toList());
     }
 
-    private SearchResponse<UniversityMajorSearch> executeSearch(BoolQuery boolQuery) throws IOException {
-        SearchRequest searchRequest = SearchRequest.of(s -> s
-                .index(INDEX_NAME)
-                .query(q -> q.bool(boolQuery))
-                .size(DEFAULT_MAX_RESULTS));
 
-        try {
-            return elasticsearchClient.search(searchRequest, UniversityMajorSearch.class);
-        } catch (IOException e) {
-            throw new AppException(ErrorCode.SEARCH_FAILED, "Search operation failed: " + e.getMessage());
-        }
-    }
-    private void validateSubjectCombinationId(Long subjectCombinationId) {
-        if (subjectCombinationId == null || subjectCombinationId <= 0) {
-            throw new AppException(ErrorCode.INVALID_PARAM, "Subject combination ID must be a positive long");
-        }
-    }
-    private boolean isValidString(String input) {
-        return input != null && !input.trim().isEmpty();
-    }
-    private void validateMajorId(Long majorId) {
-        if (majorId == null || majorId <= 0) {
-            throw new AppException(ErrorCode.INVALID_PARAM, "Major ID must be a positive long");
-        }
+    private UniversitySubjectCombinationSearchResponse mapToSubjectCombinationResponse(UniversityMajorSearch entity) {
+        return UniversitySubjectCombinationSearchResponse.builder()
+                .universityId(entity.getUniversityId())
+                .universityName(entity.getUniversityName())
+                .universityMajorCountBySubjectCombination(entity.getUniversityMajorCountBySubjectCombination())
+                .build();
     }
 
+    private UniversityMajorSearchResponse mapToMajorResponse(UniversityMajorSearch entity) {
+        return UniversityMajorSearchResponse.builder()
+                .universityId(entity.getUniversityId())
+                .universityName(entity.getUniversityName())
+                .universityMajorCountByMajor(entity.getUniversityMajorCountByMajor())
+                .build();
+    }
+
+
+
+
+    private String getCurrentUsername() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated() || authentication.getName() == null) {
+            throw new AppException(ErrorCode.UNAUTHENTICATED);
+        }
+        return authentication.getName();
+    }
 }
